[package]
name = "ycurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bat = "0.23.0"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
indexmap = { version = "2.0.0", features = ["serde"] }
itertools = "0.11.0"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
